k8s/kustomize/overlays/alpha/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elder
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: elder.localhost.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5000
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
